--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Aerial by HTML5 UP</title>
@@ -22,8 +18,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Марченко Олександр</h1>
+						<p> Мій проект &nbsp;&bull;&nbsp; 06.05 &nbsp;&bull;&nbsp; 2021 </p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
